# Automation-Python-Code-Library

./: .gitignore  GITHUB_2FA_SETUP.md  GITHUB_SETUP.md  LICENSE  README.md  SECURITY.md  backend_api.py  code_library_gui.py  create_social_preview.py  enhanced_doc_generator.py  generate_info_docs.py  generate_wiki.py
.github/: pull_request_template.md
code-library/CodeLibrary/: .gitignore  README.md  pyproject.toml  requirements.txt  run_gui.py
code-library/CodeLibrary/src/codelibrary/: __init__.py  datastructures.py  file_operations.py  gui.py  indexer.py  math_helpers.py  string_helpers.py  time_utils.py  utils.py
code-library/CodeLibrary/tests/: __init__.py  test_datastructures.py  test_math_helpers.py  test_string_helpers.py  test_utils.py
docs/: API_DOCUMENTATION.md  API_REFERENCE.md  CATEGORIES.md  CHANGELOG.md  CODE_LIBRARY_OVERVIEW.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GUI_SYSTEM.md  INSTALLATION_GUIDE.md  README.md  TROUBLESHOOTING.md  index.html
info/: INDEX.md  README.md
installers/: README.md  build_linux.sh  build_macos.sh  build_windows.bat  windows_installer.spec
wiki/: Account-Functions.md  Browser-Commands.md  Browser-Functions.md  Browser-Settings-Commands.md  Code-Library.md  Custom-Functions.md  Custom-Scripting.md  Data-Commands.md  Data-Functions.md  Database-Commands.md  Driver-Functions.md  Email-Commands.md  FTP-Commands.md  File-Commands.md  File-Functions.md  Flow-Commands.md  HTTP-Commands.md  Headless-Functions.md  Home.md  JavaScript-Commands.md  List-Commands.md  Log-Commands.md  Math-Functions.md  Operation-Commands.md  (+12 more)
(+782 files in other folders)
